Refactor schemas to have better generated code
